--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-sadasda
+Guess the number, is my first game in JavaScript, the game is about that you have to try to guess one random number that the computer chose,
+for can win it you have to guess the number before tenth attempts
